--- a/src/components/IconSearch.css
+++ b/src/components/IconSearch.css
@@ -1,5 +1,7 @@
 .icon-search {
   width: 100%;
+  max-width: 100%;
+  overflow: hidden;
 }
 
 .icon-search-controls {
